@@ -21,6 +21,9 @@ bin_PROGRAMS = \
 	difxcalculator \
 	tabulatedelays
 
+dist_bin_SCRIPTS = \
+	mvdifxhere
+
 avgDiFX_SOURCES = \
 	avgDiFX.c
 
